# spinkube-performance

./: .gitignore  Makefile  README.md  utils.sh
.github/workflows/: aks.yaml  build-and-push-k6.yaml  build-and-push-spinapps.yaml  test.yaml
apps/: build-and-push.sh  deploy.sh
apps/cpu-intensive/: go.mod  main.go  spin.toml
apps/density-rust/: Cargo.toml  spin.toml
apps/hello-world-go/: go.mod  main.go  spin.toml
apps/hello-world-js/: package-lock.json  package.json  spin.toml
apps/hello-world-py/: app.py  spin.toml
apps/hello-world-rust/: Cargo.toml  spin.toml
apps/mem-intensive/: go.mod  main.go  spin.toml
apps/password-hasher/: Cargo.toml  spin.toml
apps/password-hasher/src/: lib.rs
dashboard/: Datadog.md  datadog-dashboard-url.sh  datadog-hello-world-dashboard.json  datadog-spinkube-performance-dashboard.json
dashboard/datadog/: README.md  datadog-dashboard-url.sh  datadog-spinkube-performance-dashboard.json
dashboard/grafana/: README.md  grafana-spinkube-performance-dashboard.json
environment/: README.md  kind-config.yml  runtime-class.yaml  spin-kube-k3d.sh  spin-kube-k3s.sh  spin-kube-k8s.sh  spin-kube.sh
image/k6/: Dockerfile
terraform/: .gitignore
terraform/azure/: README.md  main.tf  outputs.tf  terraform.tfvars.tmpl  variables.tf  vnet.tf
tests/: density.js  eslint.config.mjs  hello-world.js  package-lock.json  package.json  rbac.yaml  run.sh  test-run.yaml
tests/cases/: density.json  hello-world.json
tests/common/: common.js
tests/hello-world/: script.js  test-config.json  test-run.yaml
tests/scripts/: density.js  (+5 more)
(+18 files in other folders)
