[package]
name = "password-hasher"
authors = ["Vaughn Dice <vaughn.dice@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
argon2 = "0.5.3"
spin-sdk = "3.0.0"
url = "2.4.1"

[workspace]
